--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,17 +1,21 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-
+<h1> HOME PAGE</h1>
+<p>Find me in app/views/pages/home.html.erb</p>
 <% if user_signed_in? %>
+  <h3> <%= "Hello #{current_user.email}" %> </h3>
   <%= button_to "Sign out", destroy_user_session_path, method: :delete %>
 <% else %>
   <%= link_to "Sign in", new_user_session_path %>
   <%= link_to "Sign up", new_user_registration_path %>
-
 <% end %>
-
 <%= link_to "Swagger UI", swagger_root_path, target: "_blank" %>
-
 <p>You can testing API with following credentials.</p>
 <pre>
 <%= @application.as_json %>
 </pre>
+<div class="container">
+  <ul>
+    <li><%= link_to "Web Books", books_path %></li>
+    <li>API VI Books</li>
+    <li>API V1 Android Books</li>
+  </ul>
+</div>
