--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,12 @@
-<h1> HOME PAGE</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Home Page</h1>
 <% if user_signed_in? %>
-  <h3> <%= "Hello #{current_user.email}" %> </h3>
+  <h2><%= "Hello, #{current_user.email}"  %></h2>
   <%= button_to "Sign out", destroy_user_session_path, method: :delete %>
 <% else %>
   <%= link_to "Sign in", new_user_session_path %>
-  <%= link_to "Sign up", new_user_registration_path %>
+  <br>
+  <%= link_to "Sign Up", new_user_registration_path %>
+  <br>
 <% end %>
 <%= link_to "Swagger UI", swagger_root_path, target: "_blank" %>
 <p>You can testing API with following credentials.</p>
