--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,7 @@
 <div class="container">
   <ul>
     <li><%= link_to "Web Books", books_path %></li>
-    <li>API VI Books</li>
+    <li><%= link_to "API VI Books", api_v1_books_path %></li>
     <li>API V1 Android Books</li>
   </ul>
 </div>
