--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,7 @@
   </head>
   <body>
     <main>
-      <div class="container mt-5">
-        <p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
+      <div class="container mt-5 mb-5">
         <%= yield %>
       </div>
     </main>
